--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "An image share system with NodeJS, TDD, MongoDB and JEST",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start":"node ./src/server.js"
   },
   "repository": {
     "type": "git",
@@ -17,9 +18,11 @@
   },
   "homepage": "https://github.com/felipematheus1337/Images-Sharing-System-NodeJS#readme",
   "dependencies": {
+    "@types/jest": "^29.2.0",
     "express": "^4.18.2",
     "jest": "26.6",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.7.0"
+    "mongoose": "^6.7.0",
+    "supertest": "^6.3.1"
   }
 }
