--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "start":"node ./src/server.js"
+    "start": "node ./src/server.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/felipematheus1337/Images-Sharing-System-NodeJS#readme",
   "dependencies": {
     "@types/jest": "^29.2.0",
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "jest": "26.6",
     "jsonwebtoken": "^8.5.1",
