--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "homepage": "https://github.com/felipematheus1337/Images-Sharing-System-NodeJS#readme",
   "dependencies": {
     "@types/jest": "^29.2.0",
-    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "jest": "26.6",
     "jsonwebtoken": "^8.5.1",
